test/parallel/taskPar/vass/taskintents-badintents.good
taskintents-badintents.chpl:4: syntax error: 'inout' intent is not supported in a 'with' clause
taskintents-badintents.chpl:4: syntax error: 'out' intent is not supported in a 'with' clause
taskintents-badintents.chpl:4: syntax error: 'param' intent is not supported in a 'with' clause
taskintents-badintents.chpl:4: syntax error: 'type' intent is not supported in a 'with' clause
taskintents-badintents.chpl:6: syntax error: 'inout' intent is not supported in a 'with' clause
taskintents-badintents.chpl:6: syntax error: 'out' intent is not supported in a 'with' clause
taskintents-badintents.chpl:6: syntax error: 'param' intent is not supported in a 'with' clause
taskintents-badintents.chpl:6: syntax error: 'type' intent is not supported in a 'with' clause
taskintents-badintents.chpl:8: syntax error: 'inout' intent is not supported in a 'with' clause
taskintents-badintents.chpl:8: syntax error: 'out' intent is not supported in a 'with' clause
taskintents-badintents.chpl:8: syntax error: 'param' intent is not supported in a 'with' clause
taskintents-badintents.chpl:8: syntax error: 'type' intent is not supported in a 'with' clause
taskintents-badintents.chpl:10: syntax error: 'inout' intent is not supported in a 'with' clause
taskintents-badintents.chpl:10: syntax error: 'out' intent is not supported in a 'with' clause
taskintents-badintents.chpl:10: syntax error: 'param' intent is not supported in a 'with' clause
taskintents-badintents.chpl:10: syntax error: 'type' intent is not supported in a 'with' clause
